syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | error RC

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | error SEMI
   36     | error RP

   37 DefList: Def DefList
   38        | %empty

   39 Def: Specifier DecList SEMI
   40    | Specifier error SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT
   63    | Exp LB error RB

   64 Args: Exp COMMA Args
   65     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 21 26 35 36 40 63
INT (258) 18 61
FLOAT (259) 62
ID (260) 14 16 17 19 20 56 57 59 60
SEMI (261) 4 5 7 29 31 35 39 40
COMMA (262) 9 22 42 64
ASSIGNOP (263) 44 45
OR (264) 47
AND (265) 46
RELOP (266) 48
PLUS (267) 49
MINUS (268) 50 54
STAR (269) 51
DIV (270) 52
NOT (271) 55
DOT (272) 59
LP (273) 19 20 32 33 34 53 56 57
RP (274) 19 20 21 32 33 34 36 53 56 57
LB (275) 18 58 63
RB (276) 18 58 63
TYPE (277) 10
LC (278) 12 25
RC (279) 12 25 26
STRUCT (280) 12 13
RETURN (281) 31
IF (282) 32 33
ELSE (283) 33
WHILE (284) 34
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 7 24 39 40
StructSpecifier (37)
    on left: 12 13, on right: 11
OptTag (38)
    on left: 14 15, on right: 12
Tag (39)
    on left: 16, on right: 13
VarDec (40)
    on left: 17 18, on right: 8 9 18 24 43 44
FunDec (41)
    on left: 19 20 21, on right: 6
VarList (42)
    on left: 22 23, on right: 19 22
ParamDec (43)
    on left: 24, on right: 22 23
CompSt (44)
    on left: 25 26, on right: 6 30
StmtList (45)
    on left: 27 28, on right: 25 27
Stmt (46)
    on left: 29 30 31 32 33 34 35 36, on right: 27 32 33 34
DefList (47)
    on left: 37 38, on right: 12 25 37
Def (48)
    on left: 39 40, on right: 37
DecList (49)
    on left: 41 42, on right: 39 42
Dec (50)
    on left: 43 44, on right: 41 42
Exp (51)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63, on right: 29 31 32 33 34 44 45 46 47 48 49 50 51 52 53 54 55
    58 59 63 64 65
Args (52)
    on left: 64 65, on right: 56 64


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    7 ExtDef: Specifier error . SEMI
   21 FunDec: error . RP

    SEMI  shift, and go to state 20
    RP    shift, and go to state 21


State 14

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 22

    $default  reduce using rule 17 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 23


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 26
    LC     shift, and go to state 27

    CompSt  go to state 28


State 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 30
    Def              go to state 31


State 20

    7 ExtDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 21

   21 FunDec: error RP .

    $default  reduce using rule 21 (FunDec)


State 22

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    RP      shift, and go to state 32
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 34
    ParamDec         go to state 35


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 17


State 25

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 38


State 26

   26 CompSt: error . RC

    RC  shift, and go to state 39


State 27

   25 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 31


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   39 Def: Specifier . DecList SEMI
   40    | Specifier . error SEMI

    error  shift, and go to state 41
    ID     shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 30

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 31

   37 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 38 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 31


State 32

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 33

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 47


State 34

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 48


State 35

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 49

    $default  reduce using rule 23 (VarList)


State 36

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 37

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 38

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 50


State 39

   26 CompSt: error RC .

    $default  reduce using rule 26 (CompSt)


State 40

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 27
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


State 41

   40 Def: Specifier error . SEMI

    SEMI  shift, and go to state 65


State 42

   18 VarDec: VarDec . LB INT RB
   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 66
    LB        shift, and go to state 25

    $default  reduce using rule 43 (Dec)


State 43

   39 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 67


State 44

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 41 (DecList)


State 45

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 46

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


State 47

   18 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 24 (ParamDec)


State 48

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 49

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 69
    ParamDec         go to state 35


State 50

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 51

   26 CompSt: error . RC
   35 Stmt: error . SEMI
   36     | error . RP

    SEMI  shift, and go to state 70
    RP    shift, and go to state 71
    RC    shift, and go to state 39


State 52

   61 Exp: INT .

    $default  reduce using rule 61 (Exp)


State 53

   62 Exp: FLOAT .

    $default  reduce using rule 62 (Exp)


State 54

   56 Exp: ID . LP Args RP
   57    | ID . LP RP
   60    | ID .

    LP  shift, and go to state 72

    $default  reduce using rule 60 (Exp)


State 55

   54 Exp: MINUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 73


State 56

   55 Exp: NOT . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 74


State 57

   53 Exp: LP . Exp RP

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 75


State 58

   31 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 76


State 59

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 77


State 60

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 78


State 61

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 62

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 79


State 63

   27 StmtList: Stmt . StmtList

    error   shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 27
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 80
    Stmt      go to state 63
    Exp       go to state 64


State 64

   29 Stmt: Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    OR        shift, and go to state 83
    AND       shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 65

   40 Def: Specifier error SEMI .

    $default  reduce using rule 40 (Def)


State 66

   44 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 92


State 67

   39 Def: Specifier DecList SEMI .

    $default  reduce using rule 39 (Def)


State 68

   42 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 93
    Dec      go to state 44


State 69

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 70

   35 Stmt: error SEMI .

    $default  reduce using rule 35 (Stmt)


State 71

   36 Stmt: error RP .

    $default  reduce using rule 36 (Stmt)


State 72

   56 Exp: ID LP . Args RP
   57    | ID LP . RP

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57
    RP     shift, and go to state 94

    Exp   go to state 95
    Args  go to state 96


State 73

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   54    | MINUS Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 90
    LB    shift, and go to state 91

    $default  reduce using rule 54 (Exp)


State 74

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   55    | NOT Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    DOT  shift, and go to state 90
    LB   shift, and go to state 91

    $default  reduce using rule 55 (Exp)


State 75

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   53    | LP Exp . RP
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 82
    OR        shift, and go to state 83
    AND       shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    DOT       shift, and go to state 90
    RP        shift, and go to state 97
    LB        shift, and go to state 91


State 76

   31 Stmt: RETURN Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID
   63    | Exp . LB error RB

    SEMI      shift, and go to state 98
    ASSIGNOP  shift, and go to state 82
    OR        shift, and go to state 83
    AND       shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 77

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 99


State 78

   34 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 100


State 79

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


State 80

   27 StmtList: Stmt StmtList .

    $default  reduce using rule 27 (StmtList)


State 81

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 82

   45 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 101


State 83

   47 Exp: Exp OR . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 102


State 84

   46 Exp: Exp AND . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 103


State 85

   48 Exp: Exp RELOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 104


State 86

   49 Exp: Exp PLUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 105


State 87

   50 Exp: Exp MINUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 106


State 88

   51 Exp: Exp STAR . Exp
